<resources>

    <string name="app_name">xGame</string>
    <string name="ButtonOne">Speech &amp; Sound Demo</string>
    <string name="Label1">اضغط لبدء الأوامر.لاختبار سماعة الأذن اليمنى قل (يمين). لاختبار سماعة الأذن اليسرى قل (يسار).لاختبار كلتا السماعتين قل (اختبار) .</string>
    <string name="gestureString">Please try the differnent gestures you like , all gestures are supported including swipe right , left , up , down , single tap , double tap and long touch</string>
    <string name="button2">Gestures demo</string>
    <string name="button3">Sensors demo</string>
    <string name="GPS_TV">Please wait while the system detects your location..</string>
    <string name="ACC_TV">If you moved the device the Accelerometer data will be shown</string>
    <string name="Gyro_TV">Please,rotate the device to test the Gyroscope sensor</string>
    <string name="RTL">اضغط هنا لاختبار ارتفاع وانخفاض مستوى الصوت من اليمين لليسار</string>
    <string name="LTR">اضغط هنا لاختبار ارتفاع وانخفاض مستوى الصوت من اليسار لليمين</string>
    <string name="button4">TTS Demo</string>
    <string name="TTS">Start</string>
    <string name="Hint">Enter your text here</string>
    <string name="XMLdata">XML Data Read:</string>
    <string name="button5">XML Demo</string>
    <string name="langugeSelect">Use the menu button to select your speech language.</string>
    <string name="getready">Ready?</string>
    <string name="MainViewTitle">Headphone Games</string>
    <string name="img_cnt_desc">Headphone Games Category Image</string>
    <string name="tv_cat">xGame Categories</string>
    <string name="nxt_btn">Next Category</string>
    <string name="pre_btn">Previous Category</string>
    <string name="sel_btn">Select This Category</string>
    <string name="game">Game Image</string>
    <string name="progress">Download Progress..Please Wait</string>
    <string name="name">Catch The Beep</string>
    <string name="down">Downloading Game</string>
    <string name="percent">50%</string>
    <string name="play">Start the game</string>
    <string name="home">Home</string>
    <string name="how">How to play</string>
    <string name="about">About Us</string>
    <string name="cont">Contact Us</string>
    <string name="sb">Scoreboard</string>
    <string name="over">Game Over</string>
    <string name="log">Login button</string>
    <string name="reg">Register button</string>
    <string name="logbtn">Login</string>
    <string name="regbtn">Register</string>
    <string name="pwd">Password:</string>
    <string name="usr">E-mail:</string>
    <string name="game_cnt">The game icon</string>
    <string name="down_cnt">Download</string>
    <string name="LoginOrReegister">Login  |  Register</string>
    <string name="loading">Loading ..</string>
    <string name="conerror">Connection Error</string>
    <string name="plyagn">Play again</string>
    <string name="ent_name">Enter your name here</string>
    <string name="ent_pass">Enter your password here</string>
    <string name="welcome">Welcome image</string>
    <string name="refresh">Refresh button</string>
    <string name="error">Error</string>
    <string name="bar">Loading your games</string>
    <string name="test">This is to test the proper postioning of your headphones, Please tap anywhere on the screen to start the test.</string>
    <string name="righttest">Right</string>
    <string name="lefttest">Left</string>
    <string name="cats">Categories</string>
    <string name="HeadTest">Test your headphones</string>
    <string name="drawer_open">Options</string>
    <string name="offline">play offline</string>
    <string name="offlinestate">You are offline now</string>
    <string name="type">Type your message ..</string>
    <string name="send">via text</string>
    <string name="record">Via voice</string>
    <string name="send2">Send</string>
    <string name="delete">Delete</string>
    <string name="recording">Waiting..</string>
    <string name="pau">pause button</string>
    <string name="pla">play button</string>
    <string name="rec">Record button</string>
    <string name="cancel">close this dialog</string>
    <string name="cntctustitle">How do you want to send us your feedback?</string>
    <string name="viatxt">Via Text</string>
    <string name="viasnd">Via Voice</string>
    <string name="forgot"><u>forgot your password..?</u></string>
    <string name="facebook_app_id">1928673774025481</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook to share your rank</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook to share your rank</string>

</resources>