<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/cancel"
        android:src="@drawable/closerec" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/line" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/pause" 
            android:contentDescription="@string/pau"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/rec"
            android:src="@drawable/record" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/pla"
            android:src="@drawable/playrecfile" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_gravity="right">

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/send2" />

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                
                android:text="@string/delete" />
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>