<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/cancel"
        android:src="@drawable/closerec" />

    <LinearLayout
        android:id="@+id/reglay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.00"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:labelFor="@id/editText1"
                android:text="@string/usr"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="6dp"
                android:layout_weight="50"
                android:background="@android:color/white"
                android:contentDescription="@string/ent_name"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold|italic" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editText2"
                android:text="@string/pwd"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="6dp"
                android:background="@android:color/white"
                android:contentDescription="@string/ent_pass"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/reg"
            android:src="@drawable/register" />
    </LinearLayout>

</LinearLayout>