<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:background="@drawable/categories"
        android:orientation="horizontal"
        android:weightSum="100" >

        <ImageView
            android:id="@+id/leftArrow"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:layout_weight="5"
            android:layout_marginStart="-25dp"
            android:contentDescription="@string/pre_btn"
            android:src="@drawable/larr" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_marginStart="-5dp"
            android:layout_weight="90"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/catImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                android:contentDescription="@string/pre_btn"
                android:src="@drawable/loading2" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cats"
                android:layout_marginTop="-40dp"
                android:textStyle="bold|italic"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <ImageView
            android:id="@+id/rightArrow"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:layout_weight="5"
            android:layout_marginEnd="-25dp"
            android:contentDescription="@string/pre_btn"
            android:src="@drawable/rarr" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
    </ListView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:id="@+id/translay"
        android:background="@drawable/trans"
        android:orientation="vertical"
         >
        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="20"
            android:contentDescription="@string/bar"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />
        </LinearLayout>

</LinearLayout>